# aiams-sparse

./: CMakeLists.txt  README.md  config.h.in
comex/: Makefile.in  aclocal.m4  config.h.in~  configure~
comex/autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.3
comex/build-aux/: ltmain.sh
comex/src-mpi-pr/: comex.c
global/c++/: CMakeLists.txt  Makefile.junction  README.md  graph.hpp  graph_test.cpp  sprs_dnn.cpp  utils.hpp  vars.hpp
global/src/: CMakeLists.txt  base.c  capi.c  elem_alg.c  ga-papi.h  ga.h  global.fh.in  onesided.c  sparse.array.c
global/testing/: CMakeLists.txt  RAN3.C  async_cg.c  randomcg.c  sddmm_test.c  sprs_test.c  testsparse.c
